force-app/main/default/objects/Person_Detail_Change__e/Person_Detail_Change__e.object-meta.xml
<CustomObject>
    <description>This platform event is published when a person&apos;s details are changed.</description>
    <label>Person Detail Change</label>
    <pluralLabel>Person Detail Changes</pluralLabel>
</CustomObject>