force-app/main/default/objects/Person_Detail_Change__e/fields/Account_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Account_Nickname__c</fullName>
    <label>Account Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>