force-app/main/default/objects/Person_Detail_Change__e/fields/Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Number__c</fullName>
    <label>Bank Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>