force-app/main/default/objects/Person_Detail_Change__e/fields/Bank_Status__c.field-meta.xml
<CustomField>
    <fullName>Bank_Status__c</fullName>
    <label>Bank Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>