force-app/main/default/objects/Person_Detail_Change__e/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Defines the changed city of the person.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>