force-app/main/default/objects/Person_Detail_Change__e/fields/Close_Request__c.field-meta.xml
<CustomField>
    <fullName>Close_Request__c</fullName>
    <label>Close Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>