force-app/main/default/objects/Person_Detail_Change__e/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Defines the changed country of the person account.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>