force-app/main/default/objects/Person_Detail_Change__e/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>Defines the customer ID of the account.</description>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>