force-app/main/default/objects/Person_Detail_Change__e/fields/FB_Advisor_email__c.field-meta.xml
<CustomField>
    <fullName>FB_Advisor_email__c</fullName>
    <description>Stores the Forsyth Barr Advisor&apos;s email for the Referral Process</description>
    <label>FB Advisor email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>