force-app/main/default/objects/Person_Detail_Change__e/fields/FB_Advisor_name__c.field-meta.xml
<CustomField>
    <fullName>FB_Advisor_name__c</fullName>
    <description>Stores the Forsyth Barr Advisor&apos;s name for the Referral Process</description>
    <label>FB Advisor name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>