force-app/main/default/objects/Person_Detail_Change__e/fields/ID_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ID_Expiry_Date__c</fullName>
    <description>Expiry Date of the Passport</description>
    <label>ID Expiry Date</label>
    <type>Date</type>
</CustomField>