force-app/main/default/objects/Person_Detail_Change__e/fields/ID_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ID_Last_Name__c</fullName>
    <label>ID Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>