force-app/main/default/objects/Person_Detail_Change__e/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <description>ID Type: Drivers License or Passport</description>
    <label>ID Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>