force-app/main/default/objects/Person_Detail_Change__e/fields/ID_Version__c.field-meta.xml
<CustomField>
    <fullName>ID_Version__c</fullName>
    <description>Version of the Drivers License</description>
    <label>ID Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>