force-app/main/default/objects/Person_Detail_Change__e/fields/IRD_Number__c.field-meta.xml
<CustomField>
    <fullName>IRD_Number__c</fullName>
    <description>Defines the changed IRD number of the person.</description>
    <label>IRD Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>