force-app/main/default/objects/Person_Detail_Change__e/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Generate data in the field to create a middle name Jason when CS change a middle name in SF.</description>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>