force-app/main/default/objects/Person_Detail_Change__e/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Defines the changed mobile number of the person.</description>
    <label>Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>