force-app/main/default/objects/Person_Detail_Change__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Defines the changed name of the person.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>