force-app/main/default/objects/Person_Detail_Change__e/fields/Pause_Trading__c.field-meta.xml
<CustomField>
    <fullName>Pause_Trading__c</fullName>
    <label>Pause Trading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>