force-app/main/default/objects/Person_Detail_Change__e/fields/PIR__c.field-meta.xml
<CustomField>
    <fullName>PIR__c</fullName>
    <description>Defines the changed PIR of the person.</description>
    <label>PIR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>