force-app/main/default/objects/Person_Detail_Change__e/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Defines the changed postal code of the person.</description>
    <label>Postal Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>