force-app/main/default/objects/Person_Detail_Change__e/fields/Referred__c.field-meta.xml
<CustomField>
    <fullName>Referred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the Account was referred from Forsyth Barr</description>
    <label>Referred</label>
    <type>Checkbox</type>
</CustomField>