force-app/main/default/objects/Person_Detail_Change__e/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Defines the changed street of the person.</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>