force-app/main/default/objects/Person_Detail_Change__e/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <description>This field is mapped with the mailing city which has changed the label to Suburb.</description>
    <label>Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>