force-app/main/default/objects/Person_Detail_Change__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp to overcome duplicate events</description>
    <label>Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>