force-app/main/default/objects/Person_Detail_Change__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Person Change Event</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>